--- a/nuxeo-dsl-studio/css/app.css
+++ b/nuxeo-dsl-studio/css/app.css
@@ -446,3 +446,21 @@ input.upload {
 .my-mfp-slide-bottom.mfp-removing.mfp-bg {
 	opacity: 0;
 }
+
+
+.markTextError {
+    display: inline-block;
+    position: relative;
+}
+
+.markTextError:before {
+    content: "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~";
+    font-size: 0.8em;
+    font-weight: bolder;
+    font-family: Times New Roman, Serif;
+    color: red;
+    width: 100%;
+    position: absolute;
+    top: 6px;
+    overflow: hidden;
+}
